local_server was added

--- a/configure.ac
+++ b/configure.ac
@@ -44,5 +44,6 @@ AC_ARG_ENABLE(debug,
 
 # pass LDFLAGS=-L${LOCALBASE}/lib in the environment
 AC_CHECK_LIB(mrkcommon, _fini, [], [AC_MSG_FAILURE(libmrkcommon.so is required. Please find it at git@github.com:mkushnir/mrkcommon.git)]) 
+AC_CHECK_LIB(mrkthr, _fini, [], [AC_MSG_FAILURE(libthr.so is required. Please find it at git@github.com:mkushnir/mrkthr.git)]) 
 
 AC_OUTPUT
