--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = foreign
 CLEANFILES = *.core
 #CLEANFILES += *.in
 
-noinst_PROGRAMS=testfoo
+noinst_PROGRAMS=testfoo testdaemonize
 
 distdir = ../../$(PACKAGE)-$(VERSION)/src/test
 dist_HEADERS = unittest.h
@@ -17,10 +17,13 @@ else
 DEBUG_FLAGS = -DNDEBUG -O3
 endif
 
-nodist_testfoo_SOURCES = ../diag.c
 testfoo_SOURCES = testfoo.c
 testfoo_CFLAGS = $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I.. -I$(includedir)
-testfoo_LDFLAGS = -L$(libdir) -lmrkcommon -lmrkapp
+testfoo_LDFLAGS = -L$(libdir) -lmrkapp
+
+testdaemonize_SOURCES = testdaemonize.c
+testdaemonize_CFLAGS = $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I.. -I$(includedir)
+testdaemonize_LDFLAGS = -L$(libdir) -lmrkapp
 
 ../diag.c ../diag.h: ../diag.txt
 	sh ../gen-diag
