--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,7 +33,7 @@ libmrkapp_la_LDFLAGS = -version-info 0:0:0 -L$(libdir) -lmrkcommon
 SUBDIRS = . test
 
 diag.c diag.h: diag.txt
-	sh ./gen-diag
+	sh ./gen-diag mrkapp
 
 run: all
 	for i in $(bin_PROGRAMS); do if test -x ./$$i; then LD_LIBRARY_PATH=$(libdir) ./$$i; fi; done;
