--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,8 @@ noinst_HEADERS =
 
 libmrkapp_la_SOURCES = mrkapp.c \
 		       local_server.c \
-		       daemonize.c
+		       daemonize.c \
+		       fasthash.c
 
 nodist_libmrkapp_la_SOURCES = diag.c
 
