--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,7 +5,7 @@ CLEANFILES = *.core
 noinst_PROGRAMS=testfoo testdaemonize
 
 distdir = $(top_srcdir)/$(PACKAGE)-$(VERSION)/test
-noinst_HEADERS = unittest.h
+dist_HEADERS = unittest.h
 
 if DEBUG
     DEBUG_FLAGS = -g -O0 @CLANG_DEBUG@
