--- a/configure.ac
+++ b/configure.ac
@@ -90,6 +90,12 @@ AC_CHECK_MEMBER([struct sockaddr_un.sun_len],
 
 AC_PRESERVE_HELP_ORDER
 
+AC_SUBST(MRKCOMMON_LOCAL_CFLAGS, [''])
+AC_SUBST(MRKCOMMON_LOCAL_LDFLAGS, [''])
+
+AC_SUBST(MRKTHR_LOCAL_CFLAGS, [''])
+AC_SUBST(MRKTHR_LOCAL_LDFLAGS, [''])
+
 AC_ARG_ENABLE(debug,
               AC_HELP_STRING([--enable-debug],
                              [Enable debug build (default=no)]),
