--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,5 @@
 AUTOMAKE_OPTIONS = foreign subdir-objects
 
-distdir = ../$(PACKAGE)-$(VERSION)/src
-dist_HEADERS = mrkapp_private.h
-
 BUILT_SOURCES = diag.c diag.h
 EXTRA_DIST = diag.txt gen-diag
 CLEANFILES = $(BUILT_SOURCES) *.core
@@ -12,7 +9,7 @@ lib_LTLIBRARIES = libmrkapp.la
 
 nobase_include_HEADERS = mrkapp.h mrkhttp.h
 
-noinst_HEADERS =
+noinst_HEADERS = mrkapp_private.h
 
 libmrkapp_la_SOURCES = mrkapp.c \
 		       mrkhttp.c \
