--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,7 +26,7 @@ else
 DEBUG_FLAGS = -DNDEBUG -O3
 endif
 
-libmrkapp_la_CFLAGS = $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 @MRKCOMMON_LOCAL_CFLAGS@ @MRKTHR_LOCAL_CFLAGS@ @_GNU_SOURCE_MACRO@ -I$(includedir)
+libmrkapp_la_CFLAGS = $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 @MRKCOMMON_LOCAL_CFLAGS@ @MRKTHR_LOCAL_CFLAGS@ @_GNU_SOURCE_MACRO@ @_XOPEN_SOURCE_MACRO@ -I$(includedir)
 
 libmrkapp_la_LDFLAGS = -version-info 0:0:0 -lmrkthr @MRKTHR_LOCAL_LDFLAGS@ -lmrkcommon @MRKCOMMON_LOCAL_LDFLAGS@ -L$(libdir) -lz -lcrypto -lssl
 
