--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -12,24 +12,25 @@ else
 DEBUG_FLAGS = -DNDEBUG -O3
 endif
 
+common_cflags = @_GNU_SOURCE_MACRO@ @_XOPEN_SOURCE_MACRO@ $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
 testfoo_SOURCES = testfoo.c
-testfoo_CFLAGS = @_GNU_SOURCE_MACRO@ $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
+testfoo_CFLAGS = $(common_cflags)
 testfoo_LDFLAGS = -L$(top_srcdir)/src/.libs -lmrkapp
 
 testdaemonize_SOURCES = testdaemonize.c
-testdaemonize_CFLAGS = @_GNU_SOURCE_MACRO@ $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
+testdaemonize_CFLAGS = $(common_cflags)
 testdaemonize_LDFLAGS = -L$(top_srcdir)/src/.libs -lmrkapp
 
 testhttp_SOURCES = testhttp.c
-testhttp_CFLAGS = @_GNU_SOURCE_MACRO@ $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
+testhttp_CFLAGS = $(common_cflags)
 testhttp_LDFLAGS = -L$(top_srcdir)/src/.libs -lmrkapp
 
 testhttpuri_SOURCES = testhttpuri.c
-testhttpuri_CFLAGS = @_GNU_SOURCE_MACRO@ $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
+testhttpuri_CFLAGS = $(common_cflags)
 testhttpuri_LDFLAGS = -L$(top_srcdir)/src/.libs -lmrkapp
 
 testmnhttpc_SOURCES = testmnhttpc.c
-testmnhttpc_CFLAGS = @_GNU_SOURCE_MACRO@ $(DEBUG_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
+testmnhttpc_CFLAGS = $(common_cflags)
 testmnhttpc_LDFLAGS = -L$(top_srcdir)/src/.libs -lmrkapp -lssl
 
 testrun: all
