--- a/configure.ac
+++ b/configure.ac
@@ -119,7 +119,7 @@ AC_ARG_ENABLE(debug,
               [AM_CONDITIONAL([DEBUG], [test "$enable_debug" = "yes"])])
 
 # pass LDFLAGS=-L${LOCALBASE}/lib in the environment
-AC_CHECK_LIB(mrkcommon, mrkcommon_diag_str, [], [AC_MSG_FAILURE(libmrkcommon.so is required. Please find it at git@github.com:mkushnir/mrkcommon.git)]) 
-AC_CHECK_LIB(mrkthr, mrkthr_diag_str, [], [AC_MSG_FAILURE(libmrkthr.so is required. Please find it at git@github.com:mkushnir/mrkthr.git)]) 
+AC_CHECK_LIB(mrkcommon, mndiag_mrkcommon_str, [], [AC_MSG_FAILURE(libmrkcommon.so is required. Please find it at git@github.com:mkushnir/mrkcommon.git)]) 
+AC_CHECK_LIB(mrkthr, mndiag_mrkthr_str, [], [AC_MSG_FAILURE(libmrkthr.so is required. Please find it at git@github.com:mkushnir/mrkthr.git)]) 
 
 AC_OUTPUT
