--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,13 +8,13 @@ CLEANFILES = $(BUILT_SOURCES) *.core
 
 lib_LTLIBRARIES = libmrkapp.la
 
-nobase_include_HEADERS = mrkapp.h mrkhttp.h mnhttpc.h mncommand.h
+nobase_include_HEADERS = mrkapp.h mnhttp.h mnhttpc.h mncommand.h
 
 noinst_HEADERS = mrkapp_private.h bytestream_ssl_helper.h
 
 libmrkapp_la_SOURCES = mrkapp.c \
 		       bytestream_ssl_helper.c \
-		       mrkhttp.c \
+		       mnhttp.c \
 		       mnhttpc.c \
 		       mncommand.c \
 		       local_server.c \
