--- a/configure.ac
+++ b/configure.ac
@@ -46,6 +46,11 @@ AS_IF([test -n "$USE_GCC"],
     ])
 ])
 
+AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([.ac-aux])
+AC_CONFIG_FILES([Makefile src/Makefile test/Makefile man/Makefile])
+AC_CONFIG_HEADERS(config.h)
+
 
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
@@ -60,24 +65,19 @@ AS_CASE(["$target_os"],
     [AC_SUBST(_XOPEN_SOURCE_MACRO)]
 )
 
-AC_CONFIG_MACRO_DIR([m4])
 
 AC_LANG(C)
 
 AC_PROG_CC
 AC_PROG_CXX
 AM_PROG_AR
-AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 LT_INIT
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign subdir-objects])
 AM_SILENT_RULES([yes])
 
 dnl AM_MAINTAINER_MODE
-
-AC_CONFIG_FILES([Makefile src/Makefile test/Makefile man/Makefile])
-AC_CONFIG_HEADERS(config.h)
 
 AC_CHECK_HEADERS([syslog.h fcntl.h netdb.h sys/socket.h sys/time.h sys/file.h ])
 AC_CHECK_HEADER_STDBOOL
