--- a/port/Makefile.in
+++ b/port/Makefile.in
@@ -14,15 +14,15 @@ DISTDIR=/data0/mkushnir/distfiles
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV=	LDFLAGS="-L${LOCALBASE}/lib -L${HOME}/lib" CFLAGS=-I${HOME}/include
 
-PLIST_FILES=	include/mrkapp.h \
+PLIST_FILES=	include/mnapp.h \
 		include/mnhttp.h \
 		include/mnhttpc.h \
 		include/mncommand.h \
-		lib/libmrkapp.a \
-		lib/libmrkapp.la \
-		lib/libmrkapp.so \
-		lib/libmrkapp.so.0 \
-		lib/libmrkapp.so.0.0.0
+		lib/libmnapp.a \
+		lib/libmnapp.la \
+		lib/libmnapp.so \
+		lib/libmnapp.so.0 \
+		lib/libmnapp.so.0.0.0
 
 PLIST_DIRS=	lib include
 
