--- a/src/Makefile.freebsd
+++ b/src/Makefile.freebsd
@@ -1,6 +1,6 @@
 # Created by make-project
-LIB=mrkapp
-SHLIB_NAME=libmrkapp.so
+LIB=mnapp
+SHLIB_NAME=libmnapp.so
 
 LIBOWN=$(USER)
 LIBGRP=$(USER)
@@ -25,7 +25,7 @@ CFLAGS+= -Wall -Wextra -Werror  -g
 CFLAGS+= -shared
 .endif
 
-SRCS=	diag.c mrkapp.c foo.c
+SRCS=	diag.c mnapp.c foo.c
 
 SUBDIR=test
 
