--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,11 @@
 CLEANFILES = *.core
 #CLEANFILES += *.in
 
-noinst_PROGRAMS=testfoo testdaemonize testhttp testhttpuri testmnhttpc
+noinst_PROGRAMS=testdaemonize testhttpuri
+
+if !THIN
+noinst_PROGRAMS += testfoo testhttp testmnhttpc
+endif
 
 noinst_HEADERS = unittest.h
 
@@ -18,56 +22,53 @@ endif
 endif
 
 if ALLSTATIC
-testfoo_LDFLAGS = -all-static
 testdaemonize_LDFLAGS = -all-static
-testhttp_LDFLAGS = -all-static
 testhttpuri_LDFLAGS = -all-static
+
+if !THIN
+testfoo_LDFLAGS = -all-static
+testhttp_LDFLAGS = -all-static
 testmnhttpc_LDFLAGS = -all-static
+endif
 else
-testfoo_LDFLAGS =
 testdaemonize_LDFLAGS =
-testhttp_LDFLAGS =
 testhttpuri_LDFLAGS =
+
+if !THIN
+testfoo_LDFLAGS =
+testhttp_LDFLAGS =
 testmnhttpc_LDFLAGS =
 endif
-
-common_sources = ../src/bytestream_ssl_helper.c \
-		  ../src/daemonize.c \
-		  ../src/local_server.c \
-		  ../src/mncommand.c \
-		  ../src/mnhttp.c \
-		  ../src/mnhttpc.c \
-		  ../src/mnapp.c
+endif
 
 common_cflags = @_GNU_SOURCE_MACRO@ @_XOPEN_SOURCE_MACRO@ $(DEBUG_CC_FLAGS) -Wall -Wextra -Werror -std=c99 -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
 
-testfoo_SOURCES = $(common_sources) testfoo.c
-
-testfoo_CFLAGS = $(common_cflags)
-testfoo_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
-testfoo_LDADD = -lmnapp
-
-testdaemonize_SOURCES = $(common_sources) testdaemonize.c
-
+testdaemonize_SOURCES = testdaemonize.c
 testdaemonize_CFLAGS = $(common_cflags)
 testdaemonize_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
 testdaemonize_LDADD = -lmnapp
 
-testhttp_SOURCES = $(common_sources) testhttp.c
-
-testhttp_CFLAGS = $(common_cflags)
-testhttp_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
-testhttp_LDADD = -lmnapp
-
-testhttpuri_SOURCES = $(common_sources) testhttpuri.c
+testhttpuri_SOURCES = testhttpuri.c
 testhttpuri_CFLAGS = $(common_cflags)
 testhttpuri_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
 testhttpuri_LDADD = -lmnapp
 
-testmnhttpc_SOURCES = $(common_sources) testmnhttpc.c
+if !THIN
+testfoo_SOURCES = testfoo.c
+testfoo_CFLAGS = $(common_cflags)
+testfoo_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
+testfoo_LDADD = -lmnapp
+
+testhttp_SOURCES = testhttp.c
+testhttp_CFLAGS = $(common_cflags)
+testhttp_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
+testhttp_LDADD = -lmnapp
+
+testmnhttpc_SOURCES = testmnhttpc.c
 testmnhttpc_CFLAGS = $(common_cflags)
 testmnhttpc_LDFLAGS += $(DEBUG_LD_FLAGS) -L$(top_srcdir)/src/.libs
 testmnhttpc_LDADD = -lmnapp -lssl
+endif
 
 testrun: all
 	for i in $(noinst_PROGRAMS); do if test -x ./$$i; then LD_LIBRARY_PATH=$(libdir) ./$$i; fi; done;
