--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,17 +6,17 @@ CLEANFILES = $(BUILT_SOURCES) *.core
 
 lib_LTLIBRARIES = libmnapp.la
 
-nobase_include_HEADERS = mnapp.h mnhttp.h mnhttpc.h mncommand.h
+nobase_include_HEADERS = mnapp.h mnhttp.h mncommand.h
 
-noinst_HEADERS = mnapp_private.h bytestream_ssl_helper.h
+noinst_HEADERS = mnapp_private.h
 
-libmnapp_la_SOURCES = mnapp.c \
-		       bytestream_ssl_helper.c \
-		       mnhttp.c \
-		       mnhttpc.c \
-		       mncommand.c \
-		       local_server.c \
-		       daemonize.c
+libmnapp_la_SOURCES = mnapp.c mnhttp.c mncommand.c daemonize.c
+
+if !THIN
+libmnapp_la_SOURCES += local_server.c bytestream_ssl_helper.c mnhttpc.c
+nobase_include_HEADERS += mntcps.h mnhttpc.h
+noinst_HEADERS += bytestream_ssl_helper.h
+endif
 
 nodist_libmnapp_la_SOURCES = diag.c
 
@@ -41,7 +41,11 @@ endif
 libmnapp_la_CFLAGS = $(DEBUG_CC_FLAGS) -Wall -Wextra -Werror -std=c99 @_GNU_SOURCE_MACRO@ @_XOPEN_SOURCE_MACRO@ -I$(top_srcdir)/src -I$(top_srcdir) -I$(includedir)
 
 libmnapp_la_LDFLAGS += $(DEBUG_LD_FLAGS) -version-info 0:0:0 -L$(libdir)
-libmnapp_la_LIBADD = -lmnthr -lmncommon -lmndiag -lcrypto -lssl
+libmnapp_la_LIBADD = -lmncommon -lmndiag
+
+if !THIN
+libmnapp_la_LIBADD += -lmnthr -lcrypto -lssl
+endif
 
 diag.c diag.h: $(diags)
 	$(AM_V_GEN) cat $(diags) | sort -u >diag.txt.tmp && mndiagen -v -S diag.txt.tmp -L mnapp -H diag.h -C diag.c *.[ch]
