--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,8 @@ BUILT_SOURCES = diag.c diag.h
 EXTRA_DIST = $(diags)
 CLEANFILES = $(BUILT_SOURCES) *.core
 #CLEANFILES += *.in
+AM_MAKEFLAGS = -s
+AM_LIBTOOLFLAGS = --silent
 
 lib_LTLIBRARIES = libmnapp.la
 
